crates/uitest/fixtures/ty/def/recursive_type.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/recursive_type.fe
---
error[3-0002]: recursive type definition
  ┌─ recursive_type.fe:1:12
  │
1 │ pub struct S1 {
  │            ^^ recursive type definition here
2 │     s: S1
  │        -- recursion occurs here

error[3-0002]: recursive type definition
   ┌─ recursive_type.fe:5:12
   │
 5 │ pub struct S2 {
   │            ^^ recursive type definition here
 6 │     s: S3
   │        -- recursion occurs here
   ·
10 │     s: S4
   │        -- recursion occurs here
   ·
14 │     s: S2
   │        -- recursion occurs here

error[3-0002]: recursive type definition
   ┌─ recursive_type.fe:5:12
   │
 5 │ pub struct S2 {
   │            ^^ recursive type definition here
 6 │     s: S3
   │        -- recursion occurs here
   ·
10 │     s: S4
   │        -- recursion occurs here
   ·
14 │     s: S2
   │        -- recursion occurs here

error[3-0002]: recursive type definition
   ┌─ recursive_type.fe:5:12
   │
 5 │ pub struct S2 {
   │            ^^ recursive type definition here
 6 │     s: S3
   │        -- recursion occurs here
   ·
10 │     s: S4
   │        -- recursion occurs here
   ·
14 │     s: S2
   │        -- recursion occurs here

error[3-0002]: recursive type definition
   ┌─ recursive_type.fe:22:12
   │
22 │ pub struct S6 {
   │            ^^ recursive type definition here
23 │     s: S5<S6>
   │        ------ recursion occurs here

error[3-0002]: recursive type definition
   ┌─ recursive_type.fe:22:12
   │
22 │ pub struct S6 {
   │            ^^ recursive type definition here
23 │     s: S5<S6>
   │        ------ recursion occurs here
